deploy/k8s/infra/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "260"
    traefik.ingress.kubernetes.io/router.middlewares: myapp-rabbitmq-redirect-slash@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: dev.example.com
      http:
        paths:
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
